# model-provenance

./: README.md  pyproject.toml
data/: known_hashes.yaml
model_provenance/: __init__.py  checker.py  cli.py  db.py  fetcher.py  fingerprint.py  license_check.py  reporter.py  scanner.py
tests/: test_checker.py  test_db.py  test_fetcher.py  test_fingerprint.py  test_license_check.py  test_reporter.py  test_scanner.py
