[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "model-provenance"
version = "0.1.0"
description = "Audit AI models for supply chain integrity via cryptographic fingerprinting, tamper detection, and provenance reporting."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
  { name = "model-provenance contributors" },
]
keywords = ["mlops", "security", "supply-chain", "ai", "model-audit", "provenance"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "typer[all]>=0.12",
  "rich>=13.7",
  "httpx>=0.27",
  "huggingface-hub>=0.23",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[project.scripts]
model-provenance = "model_provenance.cli:app"

[project.urls]
Homepage = "https://github.com/example/model-provenance"
Repository = "https://github.com/example/model-provenance"
"Bug Tracker" = "https://github.com/example/model-provenance/issues"

[tool.hatch.build.targets.wheel]
packages = ["model_provenance"]

[tool.hatch.build.targets.wheel.shared-data]
"data" = "data"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 99
target-version = "py311"
